===============================================================================
		http://pidgin-privacy-please.googlecode.com/
===============================================================================

v0.6.2 (xx xxx 2010)
====================
 * The "Guten Tag" release
 * pidgin-privacy-please is now translatable
 * Added option to specifically block OSCAR (ICQ/AIM) authorization requests

v0.6.1 (22 Oct 2009)
====================
 * The "say NULL to drugs" release
 * Fixed an issue that caused a segfault when right-clicking contact gruops

v0.6.0 (25 Aug 2009)
====================
 * The "return of the funny names" release
 * We now block people ourselves instead of (ab)using pidgin's privacy options
 * Added support for blocking AOL system messages

v0.5.4 (24 Jul 2009)
====================
 * Thanks to paul.aurich for his bug report
 * Fixed a possible crash on win32 when blocking jabber headlines
 * Use the right function to free received xmlnodes in blocked jabber headlines
 * Added option to allow all messages on IRC
 * Small code cleanup

v0.5.3 (16 Mar 2009)
====================
 * The "how did nobody notice that?" release
 * Fixed a bug that could cause segfaults on auto-reply

v0.5.2 (17 Oct 2008)
====================
 * The "no more patches" release
 * Fixed Windows build issues
 * Fixed the homepage URL
 * Removed patches subdir since no more patches are required for pidgin

v0.5.1 (01 Jul 2008)
====================
 * The "i don't freaking care about my hotmail inbox" release
 * Can now block jabber headline messages (eg. alerts from MSN transports)
 * Fixed a bug which could cause a segfault on incoming messages
 * Can now deny all authorization requests whatsoever
 * Updated the pidgin patch to version 2.4.2

v0.5.0 (07 Apr 2008)
====================
 * The "who are you and what to you want from me?" release
 * Can now automatically show the user info pop-up on authorization requests